# gadgetron

apps/clients/gadgetron_ismrmrd_client/: CMakeLists.txt  gadgetron_ismrmrd_client.cpp
apps/standalone/cpu/: CMakeLists.txt
apps/standalone/cpu/compression/: CMakeLists.txt  ismrmrd_compression.cpp  standalone_compression.cpp
apps/standalone/gpu/deblurring/2d/: CMakeLists.txt  deblurring_standalone.cpp  deblurring_standalone.cpp~
gadgets/dicom/: CMakeLists.txt
gadgets/distributed/: CMakeLists.txt
gadgets/epi/: EPICorrGadget.cpp  epi.xml
gadgets/gpu/: cuFFTGadget.cpp
gadgets/mri_core/: AcquisitionAccumulateTriggerGadget.cpp  AcquisitionAccumulateTriggerGadget.h  BucketToBufferGadget.cpp  CMakeLists.txt  CombineGadget.cpp  FFTGadget.cpp  GadgetIsmrmrdReadWrite.h  GenericReconImageArrayScalingGadget.cpp  NHLBICompression.h  NoiseAdjustGadget.cpp  NoiseAdjustGadget.h  NoiseSummaryGadget.cpp  PCACoilGadget.cpp  PCACoilGadget.h  PseudoReplicatorGadget.cpp  PseudoReplicatorGadget.h  SimpleReconGadget.cpp  SimpleReconGadget.h  WhiteNoiseInjectorGadget.cpp  fwht.h
gadgets/mri_noncartesian/: CMakeLists.txt  CPUGriddingReconGadget.cpp  CPUGriddingReconGadget.h  CPUGridding_PrepRef.cpp  CPUGridding_PrepRef.h  GriddingReconGadget.cpp  RetroCineGadget.cpp  RetroCineGadget.h
gadgets/mri_noncartesian/config/: Generic_CPU_Gridding_Recon.xml  Generic_Spiral.xml  RetroGatedSpiralCine.xml
gadgets/pmri/: gpuCgSenseGadget.cpp
gadgets/spiral/: CMakeLists.txt  SpiralToGenericGadget.cpp  SpiralToGenericGadget.h  gpuSpiralAutoDeblurGadget.cpp  gpuSpiralAutoDeblurGadget.h  gpuSpiralDeblurGadget.cpp  gpuSpiralDeblurGadget.cpp~  gpuSpiralDeblurGadget.h  gpuSpiralDeblurGadget2.cpp  gpuSpiralDeblurGadgetClean.cpp  gpuSpiralDeblurGadgetClean.h  gpuSpiralDeblurGadgetv2.cpp  gpuSpiralDeblurGadgetv2.h  gpuSpiralSensePrepGadget.cpp
gadgets/spiral/config/: CMakeLists.txt  deblurring_recon.xml  deblurring_recon_acctrig.xml
test/integration/cases/: spiral_deblur.cfg
toolboxes/fft/cpu/: hoNDFFT.cpp  hoNDFFT.h
toolboxes/nfft/cpu/: hoNFFT.cpp  hoNFFT.h
toolboxes/nfft/gpu/: KaiserBessel_kernel.cu  NFFT_C2NC_conv_kernel.cu  NFFT_NC2C_atomic_conv_kernel.cu  NFFT_NC2C_conv_kernel.cu  cuNFFT.cu  cuNFFT.h
